# SimpleLogger

./: CMakeLists.txt  readme.md
